# self-tools

./: .dockerignore  .eslintignore  .gitignore  .npmrc  .oxfmtrc.json  .oxlintrc.json  .prettierignore  AGENTS.md  Cargo.toml  README.md  WARP.md  changelog.config.js  graphql.config.ts  jest.config.ts  knip.json  oxlintrc.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
.agents/skills/apollo-client/: SKILL.md
.agents/skills/apollo-client/references/: caching.md  error-handling.md  fragments.md  integration-client.md  integration-nextjs.md  integration-react-router.md  integration-tanstack-start.md  mutations.md  queries.md  state-management.md  suspense-hooks.md  troubleshooting.md  typescript-codegen.md
.agents/skills/graphql-operations/: SKILL.md
.agents/skills/graphql-operations/references/: fragments.md  mutations.md  queries.md  tooling.md  variables.md
.agents/skills/graphql-schema/: SKILL.md
.agents/skills/graphql-schema/references/: errors.md  naming.md  pagination.md  security.md  types.md
.agents/skills/implementation-plan-design/: SKILL.md
.agents/skills/implementation-plan-design/agents/: openai.yaml
.agents/skills/implementation-plan-design/references/: dependency-changes.md  documentation-layout.md  error-contracts.md  implementation-contracts.md  integration-contracts.md  plan-template.md  system-surfaces.md  upstream-reuse-audit.md
.agents/skills/react-router-declarative-mode/: SKILL.md
.agents/skills/react-router-declarative-mode/references/: navigation.md  routing.md  url-values.md
.agents/skills/update-repository-dependencies/: SKILL.md
.agents/skills/update-repository-dependencies/agents/: openai.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  tech_request.yml
.github/workflows/: auth.yaml  bookmarks.yaml  ci.yaml  collections.yaml  gateway.yaml  login.yaml  rust_update.yaml  web_test.yaml
.husky/: pre-commit
.zed/: settings.json  tasks.json
docker/: README.md  rust.Dockerfile
docker/compose/: docker-compose.yml
docker/server/: auth.Dockerfile  bookmarks.Dockerfile  collections.Dockerfile  gateway.Dockerfile  login.Dockerfile
docker/server/rust/: preferences  rust.Dockerfile  sources.list
docker/test/: .zshrc  install.sh  test.Dockerfile
docker/web/: nginx.conf  web.Dockerfile
docs/dev/: README.md
docs/dev/issue-94/: README.md  review-checklist.md  review-findings.md
scripts/: build.sh  compose.sh
server/: Cargo.toml  README.md
server/.cargo/: config.toml
server/common/cors/: Cargo.toml
server/common/cors/src/: lib.rs
server/common/database/: Cargo.toml
server/common/errors/: Cargo.toml
server/common/errors/src/: lib.rs
server/common/graphql-common/: Cargo.toml
server/common/graphql-common/src/: date_time.rs  lib.rs  list.rs  paginate.rs  tag_match.rs
server/common/middleware/: Cargo.toml
server/common/middleware/src/: auth.rs  cors.rs  graphql_trace.rs  lib.rs  trace.rs
server/common/middleware/src/trace/: mod.rs  trace_id.rs  trace_log.rs
server/common/novel_crawler/: Cargo.toml  data.json
server/common/novel_crawler/src/: author.rs  chapter.rs  errors.rs  implement.rs  lib.rs  novel.rs  tag.rs
server/common/novel_crawler/src/implement/: jjwxc.rs  mod.rs  qidian.rs
server/common/novel_crawler/src/implement/jjwxc/: author.rs  chapter.rs  mod.rs  novel.rs  tag.rs
server/common/novel_crawler/src/implement/qidian/: author.rs  chapter.rs  mod.rs  novel.rs  tag.rs
server/common/proto/: Cargo.toml  build.rs
server/common/proto/proto/: auth.proto
server/common/proto/src/: lib.rs
server/common/proto/src/middleware/: client.rs  mod.rs  server.rs
server/common/proto/src/pre_gen/: auth.rs
server/common/thrift/: Cargo.toml  build.rs  volo.yml
server/common/thrift/idl/: auth.thrift
server/common/thrift/src/: lib.rs
server/common/xtask/: Cargo.toml  README.md
server/common/xtask/src/: compose_types.rs  context.rs  error.rs  lib.rs  main.rs  tasks.rs
server/common/xtask/src/tasks/: build.rs  cert.rs  compose.rs  lint.rs  mod.rs
server/common/xtask/src/tasks/compose/: container.rs  helpers.rs  resources.rs  topology.rs
web/: .gitignore  .npmrc  .prettierignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
web/common/auth/: package.json
web/common/auth/src/: AuthDrawerItem.tsx  atom.ts  authSlice.ts  index.tsx  service.ts  useLogin.ts
web/common/custom-graphql/: package.json
web/common/custom-graphql/src/: index.tsx
web/common/custom-table/: package.json
web/common/custom-table/src/: TableActions.tsx  TablePagination.tsx  index.tsx  useCustomTable.ts  usePage.ts
web/common/details/: package.json
web/common/details/src/: Details.tsx  Item.tsx  index.ts  types.ts
web/common/edit/: package.json
web/common/edit/src/: index.css  index.tsx  init.ts
web/common/i18n/: package.json
web/common/i18n/src/: I18nDrawerItem.tsx  i18nSlice.ts  index.tsx  useI18n.ts
web/common/i18n/src/locales/: en.json  zh.json
web/common/notify/: package.json
web/common/notify/src/: index.test.tsx  index.tsx
web/common/theme/: package.json
web/common/theme/src/: ThemeDrawerItem.tsx  ThemeFormItem.tsx  cssVar.ts  genTheme.ts  index.css  index.tsx  youTheme.ts
web/common/time/: package.json
web/common/time/src/: format.test.ts  format.ts  init.ts
web/common/types/: package.json
web/common/types/src/: enum.ts  index.ts  micro.ts
web/config/: init.d.ts
