[workspace]
members = ["./server/packages/*", "./server/common/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.103"
async-graphql = "7.2.1"
async-graphql-axum = "7.2.1"
axum = "0.8.9"
diesel = "2.3.11"
dotenv = "0.15.0"
futures = "0.3.32"
futures-util = "0.3.32"
http = "1.4.2"
nom = "8.0.0"
rand = "0.10.2"
reqwest = { version = "0.13.4", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
time = "=0.3.47"
tokio = { version = "1.52.3", default-features = false }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"
volo = "0.12.3"
volo-thrift = "0.12.4"

graphql-common = { path = "server/common/graphql-common" }
middleware = { path = "server/common/middleware" }
novel_crawler = { path = "server/common/novel_crawler" }
thrift = { path = "server/common/thrift" }

[profile.release]
strip = "symbols"
