[package]
name = "cors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# http
http= "0.2.8"
tower-http= { version = "0.3.4", features = ["cors"] }

# parse origin for cors
nom = "7.1.1"

[dev-dependencies]
anyhow = "1.0.62"
