[package]
name = "graphql-common"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", default-features = false, features = ["macros"] }
async-graphql = { version = "7.2.1" }
paste = "1.0.15"
time = { version = "0.3.48", features = ["formatting", "parsing"] }

# log
tracing = "0.1.44"
