[package]
name = "middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# trace
rand = { version = "0.9.2", optional = true }
tower = { version = "0.5.2", optional = true }
tracing = { version = "0.1.41", optional = true }
futures = { version = "0.3.31", optional = true }
http-body = { version = "1.0.1", optional = true }
pin-project-lite = { version = "0.2.16", optional = true }
futures-util = { version = "0.3.31", optional = true }

# cors
http = { version = "1.3.1", optional = true }
tower-http = { version = "0.6.6", features = ["cors"], optional = true }
nom = { version = "8.0.0", optional = true }

# graphql
async-graphql = { version = "7.0.17", optional = true }

[dev-dependencies]
anyhow = "1.0.100"

[features]
trace = [
  "rand",
  "tower",
  "http",
  "tracing",
  "futures",
  "http-body",
  "pin-project-lite",
  "futures-util",
]
cors = ["http", "tower-http", "nom"]
graphql-trace = ["tracing", "async-graphql"]
