[package]
name = "middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# trace
rand = { version = "0.10.0", optional = true }
tower = { version = "0.5.3", optional = true }
tracing = { version = "0.1.44", optional = true }
futures = { version = "0.3.32", optional = true }
http-body = { version = "1.0.1", optional = true }
pin-project-lite = { version = "0.2.16", optional = true }
futures-util = { version = "0.3.32", optional = true }

# cors
http = { version = "1.4.0", optional = true }
tower-http = { version = "0.6.8", features = ["cors"], optional = true }
nom = { version = "8.0.0", optional = true }

# graphql
async-graphql = { version = "7.2.1", optional = true }

[dev-dependencies]
anyhow = "1.0.102"

[features]
trace = [
  "rand",
  "tower",
  "http",
  "tracing",
  "futures",
  "http-body",
  "pin-project-lite",
  "futures-util",
]
cors = ["http", "tower-http", "nom"]
graphql-trace = ["tracing", "async-graphql"]
