[package]
name = "middleware"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# trace
rand = { workspace = true, optional = true }
tower = { version = "0.5.3", optional = true }
tracing = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
http-body = { version = "1.0.1", optional = true }
pin-project-lite = { version = "0.2.17", optional = true }
futures-util = { workspace = true, optional = true }

# cors
http = { workspace = true, optional = true }
tower-http = { version = "0.7.0", features = ["cors"], optional = true }
nom = { workspace = true, optional = true }

# graphql
async-graphql = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true

[features]
trace = ["rand", "tower", "http", "tracing", "futures", "http-body", "pin-project-lite", "futures-util"]
cors = ["http", "tower-http", "nom"]
graphql-trace = ["tracing", "async-graphql"]
