[package]
name = "novel_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# http
reqwest = { version = "0.12.24", features = [
    "gzip",
    "rustls-tls",
    "charset",
], default-features = false }
# html
scraper = "0.24.0"
nom = "8.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
# async trait support
tokio = { version = "1.48.0", default-features = false, features = ["macros"] }
futures = "0.3.31"
# 错误处理
thiserror = "2.0.17"
# 时间
time = { version = "0.3.44", features = ["parsing", "macros"] }

[dev-dependencies]
anyhow = "1.0.100"
