[package]
name = "novel_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# http
reqwest = { version = "0.13.2", features = [
    "gzip",
    "default-tls",
    "charset",
], default-features = false }
# html
scraper = "0.25.0"
nom = "8.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
# async trait support
tokio = { version = "1.49.0", default-features = false, features = ["macros"] }
futures = "0.3.32"
# 错误处理
thiserror = "2.0.18"
# 时间
time = { version = "0.3.47", features = ["parsing", "macros"] }

[dev-dependencies]
anyhow = "1.0.102"
