[package]
name = "novel_crawler"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# http
reqwest = { workspace = true, features = ["gzip", "default-tls", "charset"] }
# html
scraper = "0.27.0"
nom.workspace = true
serde.workspace = true
serde_json.workspace = true
# async trait support
tokio = { workspace = true, features = ["macros"] }
futures.workspace = true
# 错误处理
thiserror.workspace = true
# 时间
time = { workspace = true, features = ["parsing", "macros"] }

[dev-dependencies]
anyhow.workspace = true
