[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.6"
tonic = { version = "0.8.3", features = ["transport"] }
tower = "0.4.13"
http={ version = "0.2.8", optional = true }
[build-dependencies]
tonic-build = "0.8.4"
anyhow = "1.0.69"


[features]
client=["http"]
server=["http"]
auth=[]
auth_client=["auth","client"]
auth_server=["auth","server"]
