[package]
name = "thrift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# volo
volo = "0.11.1"
volo-thrift = "0.11.2"
pilota = "0.12.3"
serde = { version = "1.0.228", features = ["derive"] }
# ip
dns-lookup = "3.0.0"

# error
thiserror = "2.0.17"

[build-dependencies]
volo-build = "0.11.5"
