[package]
name = "thrift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# volo
volo = "0.12.2"
volo-thrift = "0.12.2"
pilota = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
# ip
dns-lookup = "3.0.1"

# error
thiserror = "2.0.18"

[build-dependencies]
volo-build = "0.12.2"
