[package]
name = "thrift"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# volo
volo.workspace = true
volo-thrift.workspace = true
pilota = "0.13.1"
serde.workspace = true
# ip
dns-lookup = "3.0.1"

# error
thiserror.workspace = true

[build-dependencies]
volo-build = "0.12.3"
