[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
bollard = { version = "0.20.2", features = ["buildkit", "time"] }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tar = "0.4.45"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt", "time"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
rcgen = "0.14.7"
walkdir = "2.5.0"
url = "2.5.8"
nom = "8.0.0"
