[package]
name = "xtask"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
bollard = { version = "0.21.0", features = ["buildkit", "chrono"] }
futures-util.workspace = true
serde.workspace = true
serde_yaml = "0.9.34"
tar = "0.4.46"
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "time"] }
tracing.workspace = true
tracing-subscriber.workspace = true
rcgen = "0.14.8"
walkdir = "2.5.0"
url.workspace = true
nom.workspace = true
